Bug 292670 - Kalgebra crash
Summary: Kalgebra crash
Status: RESOLVED FIXED
Alias: None
Product: kalgebra
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.10
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-28 09:44 UTC by dberg58
Modified: 2012-05-07 16:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dberg58 2012-01-28 09:44:53 UTC
Application: kalgebra (0.10)
KDE Platform Version: 4.7.4 (4.7.4)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-14-generic x86_64
Distribution: Ubuntu 11.10

-- Information about the crash:
- What I was doing when the application crashed:
Inside of console I typed x:=-4..4 and then 
y:=x^2

Then I clicked on Plot 2d  and then it crashed.

The crash can be reproduced every time.

-- Backtrace:
Application: KAlgebra (kalgebra), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fd0237c27c0 (LWP 4944))]

Thread 2 (Thread 0x7fd00acd3700 (LWP 4945)):
#0  0x00007fd01f10c773 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fd018357f68 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fd018358429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fd0207d8f3e in QEventDispatcherGlib::processEvents (this=0x254e580, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007fd0207accf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fd0207acef7 in QEventLoop::exec (this=0x7fd00acd2d90, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007fd0206c427f in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#7  0x00007fd02078fcbf in QInotifyFileSystemWatcherEngine::run (this=0x2e1a280) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007fd0206c6d05 in QThreadPrivate::start (arg=0x2e1a280) at thread/qthread_unix.cpp:331
#9  0x00007fd018a19efc in start_thread (arg=0x7fd00acd3700) at pthread_create.c:304
#10 0x00007fd01f11889d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fd0237c27c0 (LWP 4944)):
[KCrash Handler]
#6  Analitza::StringExpressionWriter::StringExpressionWriter (this=0x7fff05f16060, o=0x0) at ../../analitza/stringexpressionwriter.cpp:64
#7  0x00007fd022a1a727 in Analitza::Expression::toString (this=<optimized out>) at ../../analitza/expression.cpp:479
#8  0x000000000041408d in KAlgebra::add2D (this=0x25afbb0, exp=...) at ../../src/kalgebra.cpp:385
#9  0x00000000004200b3 in ConsoleHtml::openClickedUrl (this=<optimized out>, url=<optimized out>) at ../../src/consolehtml.cpp:101
#10 0x000000000042032c in ConsoleHtml::qt_metacall (this=0x25c6780, _c=QMetaObject::InvokeMetaMethod, _id=9, _a=0x7fff05f16300) at ./consolehtml.moc:111
#11 0x00007fd0207c0eba in QMetaObject::activate (sender=0x260e190, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff05f16300) at kernel/qobject.cpp:3278
#12 0x00007fd021d396bf in KParts::BrowserExtension::openUrlRequest (this=<optimized out>, _t1=<optimized out>, _t2=<optimized out>, _t3=<optimized out>) at ./browserextension.moc:286
#13 0x00007fd022e912bd in KHTMLPart::urlSelected (this=0x25c6780, url=<optimized out>, button=1, state=<optimized out>, _target=<optimized out>, _args=<optimized out>, _browserArgs=...) at ../../khtml/khtml_part.cpp:3776
#14 0x00007fd022f52daf in DOM::HTMLAnchorElementImpl::defaultEventHandler (this=0x2ec3f90, evt=0x326fdf0) at ../../khtml/html/html_inlineimpl.cpp:157
#15 0x00007fd022efa801 in DOM::NodeImpl::dispatchGenericEvent (this=0x2ec3f90, evt=0x326fdf0) at ../../khtml/xml/dom_nodeimpl.cpp:494
#16 0x00007fd022efacbe in DOM::NodeImpl::dispatchEvent (this=0x2ec3f90, evt=0x326fdf0, exceptioncode=@0x7fff05f16ab4, tempEvent=true) at ../../khtml/xml/dom_nodeimpl.cpp:401
#17 0x00007fd022e52852 in KHTMLView::dispatchMouseEvent (this=0x260a520, eventId=3, targetNode=0x2ec3f90, targetNodeNonShared=<optimized out>, cancelable=true, detail=1, _mouse=0x7fff05f16be0, setUnder=true, mouseEventType=1, orient=0) at ../../khtml/khtmlview.cpp:3610
#18 0x00007fd022e53646 in KHTMLView::mouseReleaseEvent (this=0x260a520, _mouse=0x7fff05f17470) at ../../khtml/khtmlview.cpp:1576
#19 0x00007fd01fbadcea in QWidget::event (this=0x260a520, event=0x7fff05f17470) at kernel/qwidget.cpp:8295
#20 0x00007fd01ff565b6 in QFrame::event (this=0x260a520, e=0x7fff05f17470) at widgets/qframe.cpp:557
#21 0x00007fd022e5b06d in KHTMLView::widgetEvent (this=0x260a520, e=<optimized out>) at ../../khtml/khtmlview.cpp:2209
#22 0x00007fd022e5a814 in KHTMLView::eventFilter (this=0x260a520, o=0x25bd3c0, e=0x7fff05f17470) at ../../khtml/khtmlview.cpp:2054
#23 0x00007fd0207adc88 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<optimized out>, receiver=0x25bd3c0, event=0x7fff05f17470) at kernel/qcoreapplication.cpp:902
#24 0x00007fd01fb5d43f in notify_helper (e=0x7fff05f17470, receiver=0x25bd3c0, this=0x2420ad0) at kernel/qapplication.cpp:4482
#25 QApplicationPrivate::notify_helper (this=0x2420ad0, receiver=0x25bd3c0, e=0x7fff05f17470) at kernel/qapplication.cpp:4458
#26 0x00007fd01fb62cbb in QApplication::notify (this=<optimized out>, receiver=0x25bd3c0, e=0x7fff05f17470) at kernel/qapplication.cpp:4047
#27 0x00007fd0211e3466 in KApplication::notify (this=0x7fff05f180d0, receiver=0x25bd3c0, event=0x7fff05f17470) at ../../kdeui/kernel/kapplication.cpp:311
#28 0x00007fd0207adafc in QCoreApplication::notifyInternal (this=0x7fff05f180d0, receiver=0x25bd3c0, event=0x7fff05f17470) at kernel/qcoreapplication.cpp:787
#29 0x00007fd01fb5e442 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#30 QApplicationPrivate::sendMouseEvent (receiver=0x25bd3c0, event=0x7fff05f17470, alienWidget=0x25bd3c0, nativeWidget=0x2618cc0, buttonDown=0x25bd3c0, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3146
#31 0x00007fd01fbdd9d5 in QETWidget::translateMouseEvent (this=0x2618cc0, event=<optimized out>) at kernel/qapplication_x11.cpp:4571
#32 0x00007fd01fbdc94e in QApplication::x11ProcessEvent (this=0x7fff05f180d0, event=0x7fff05f17c90) at kernel/qapplication_x11.cpp:3693
#33 0x00007fd01fc054a2 in x11EventSourceDispatch (s=0x2425730, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#34 0x00007fd018357a5d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#35 0x00007fd018358258 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#36 0x00007fd018358429 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#37 0x00007fd0207d8ed6 in QEventDispatcherGlib::processEvents (this=0x23c2fa0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#38 0x00007fd01fc0510e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#39 0x00007fd0207accf2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#40 0x00007fd0207acef7 in QEventLoop::exec (this=0x7fff05f18060, flags=...) at kernel/qeventloop.cpp:201
#41 0x00007fd0207b1789 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#42 0x0000000000413bad in main (argc=1, argv=0x7fff05f18338) at ../../src/main.cpp:41

Reported using DrKonqi
Comment 1 Aleix Pol 2012-05-07 16:12:09 UTC
Git commit 4861f89d9d63ab0c664399ff552a7b26e3ded57b by Aleix Pol.
Committed on 07/05/2012 at 18:10.
Pushed by apol into branch 'KDE/4.8'.

When adding plots from the console, use the resulting expression instead of the input

This way we don't move declarations around.

M  +5    -9    src/consolehtml.cpp

http://commits.kde.org/kalgebra/4861f89d9d63ab0c664399ff552a7b26e3ded57b
Comment 2 Aleix Pol 2012-05-07 16:12:09 UTC
Git commit 96e039a4e5fd889b619e5a92b19f8b45e759615c by Aleix Pol.
Committed on 07/05/2012 at 18:10.
Pushed by apol into branch 'master'.

When adding plots from the console, use the resulting expression instead of the input

This way we don't move declarations around.

M  +5    -9    src/consolehtml.cpp

http://commits.kde.org/kalgebra/96e039a4e5fd889b619e5a92b19f8b45e759615c