When adding plots from the console, use the resulting expression instead of the input

This way we don't move declarations around.

BUG: 292670